--- a/web/static/style.css
+++ b/web/static/style.css
@@ -37,14 +37,14 @@ html {
   justify-content: center;
   align-items: center;
 }
-#stream{
+/* #stream{
   width: auto;
   height: auto;
   background-color:rgb(174, 173, 173);
   border-radius: 20px;
   height: 100%;
   transform: scale(auto);
-}
+} */
 
 #map {
   width: 100%;
@@ -56,6 +56,11 @@ html {
 
 .item{
   flex: 1;
+  width: 100%; /* 設置寬度為 100% */
+  height: auto; /* 自動調整高度以保持比例 */
+  max-width: 300px; /* 設置最大寬度，根據需要調整 */
+  display: block;
+  margin: 0 auto; /* 使圖片居中 */
 }
 
 #digital_data {
@@ -86,12 +91,12 @@ html {
 #clock{
   display: flex;
   justify-content: center;
-  font-size: auto;
+  font-size: 250%;
   padding: 20px;
   font-family: Arial, sans-serif;
   font-weight: 800;
   color: rgb(174, 173, 173);
-  height: 40%;
+  height: 60%;
   width: auto;
 }
 
@@ -125,16 +130,23 @@ html {
 
 /* 高度計 */
 #altitude_bar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 20%;
   height: 80%;
 }
 
 .altitude{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 50%;
   color: rgb(103, 102, 102);
   font-family: Arial, sans-serif;
-  justify-content: center;
 }
 
 .altitude_num{
@@ -162,6 +174,11 @@ html {
   max-height: 75%;
   max-width: 20%;
   object-fit: cover;
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+  display: block;
+  margin: 0 auto;
 }
 
 .center {
@@ -170,13 +187,13 @@ html {
 }
 
 /* 羅盤 */
-#course{
+/* #course{
   display: flex;
   width: 20%;
   height: 80%;
   overflow: hidden;
+} */
 
-}
 /* 鏡頭按鈕設定 */
 #cam_btn{
   background-color:rgb(103, 102, 102);
@@ -184,7 +201,7 @@ html {
   transform: scale(0.975);
   display: flex;
   width: 20%;
-  max-height: 80%;
+  height: 80%;
   flex-direction: column;
   object-fit: contain;
 }
