--- a/web/static/style.css
+++ b/web/static/style.css
@@ -98,7 +98,7 @@ html {
   justify-content: center;
   font-size: 250%;
   padding: 20px;
-  font-family: Arial, sans-serif;
+  font-family: "Lucida Console";
   font-weight: 800;
   color: rgb(174, 173, 173);
   height: 60%;
@@ -151,7 +151,7 @@ html {
   width: 100%;
   height: 50%;
   color: rgb(103, 102, 102);
-  font-family: Arial, sans-serif;
+  font-family: "Lucida Console";
 }
 
 .altitude_num{
@@ -159,7 +159,7 @@ html {
   justify-content: center;
   font-size: 150%;
   padding: 20px;
-  font-family: Arial, sans-serif;
+  font-family: "Lucida Console";
   font-weight: 800;
   color: rgb(103, 102, 102);
   height: 40%;
