--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -70,25 +70,28 @@
         </div>
         <div id="cam_btn">
             <div class="btn_and_word">
-                <a>Web Cam</a>
-                <label class="switch" id="webcam">
+                <a>NUMBER OF SATELLITES</a>
+                <!-- <label class="switch" id="webcam">
                     <input type="checkbox" class="toggleSwitch">
                     <span class="slider"></span>
-                </label>
+                </label> -->
+                <a>NONE</a>
             </div>
             <div class="btn_and_word">
-                <a>Light</a>
-                <label class="switch" id="light">
+                <a>COMMUNICATION QUALITY</a>
+                <!-- <label class="switch" id="light">
                     <input type="checkbox" class="toggleSwitch">
                     <span class="slider"></span>
-                </label>
+                </label> -->
+                <a>NONE</a>
             </div>
             <div class="btn_and_word">
-                <a>High FPS</a>
-                <label class="switch" id="FPS">
+                <a>FIX MODE</a>
+                <!-- <label class="switch" id="FPS">
                     <input type="checkbox" class="toggleSwitch">
                     <span class="slider"></span>
-                </label>
+                </label> -->
+                <a>NONE</a>
             </div>
         </div>
     </div>
@@ -96,7 +99,7 @@
     <dialog id="record_page" class="modal">
         <div id="modal-content">
             <span id="close">×</span>
-            <p>這是記錄頁面的彈出視窗！</p>
+            <!-- <p>這是記錄頁面的彈出視窗！</p> -->
             <label for="file-select">Choose a file:</label>
             <select id="file-select">
                 {% if files %}
@@ -110,29 +113,33 @@
         </div>
         <div class="content-container">
             <div id="float_data">
-                <div class="data-section">
-                    <p class="title">TIME</p>
-                    <p class="content" id="time-content">時間</p>
+                <div class="data-section-container">
+                    <div class="data-section">
+                        <p class="title">TIME</p>
+                        <p class="content" id="time-content">時間</p>
+                    </div>
+                    <div class="data-section">
+                        <p class="title">COURSE</p>
+                        <p class="content">航向</p>
+                    </div>
+                    <div class="data-section">
+                        <p class="title">PRESSURE ALTITUDE</p>
+                        <p class="content">壓力高度</p>
+                    </div>
                 </div>
-                <div class="data-section">
-                    <p class="title">COURSE</p>
-                    <p class="content">航向</p>
-                </div>
-                <div class="data-section">
-                    <p class="title">PRESSURE ALTITUDE</p>
-                    <p class="content">壓力高度</p>
-                </div>
-                <div class="data-section">
-                    <p class="title">DEPRESSION</p>
-                    <p class="content">氣壓</p>
-                </div>
-                <div class="data-section">
-                    <p class="title">RELATIVE ALTITUDE</p>
-                    <p class="content">相對高度</p>
-                </div>
-                <div class="data-section">
-                    <p class="title">COORDINATE</p>
-                    <p class="content">坐標</p>
+                <div class="data-section-container">
+                    <div class="data-section">
+                        <p class="title">DEPRESSION</p>
+                        <p class="content">氣壓</p>
+                    </div>
+                    <div class="data-section">
+                        <p class="title">RELATIVE ALTITUDE</p>
+                        <p class="content">相對高度</p>
+                    </div>
+                    <div class="data-section">
+                        <p class="title">COORDINATE</p>
+                        <p class="content">坐標</p>
+                    </div>
                 </div>
                 <div class="data-section">
                     <p class="title">ADJUST VALUE</p>
