修正資料記錄頁面

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -104,29 +104,29 @@
                 <div class="data-section-container">
                     <div class="data-section">
                         <p class="title">TIME</p>
-                        <p class="content" id="time-content">時間</p>
+                        <p class="content" id="time-content"></p>
                     </div>
                     <div class="data-section">
-                        <p class="title">COURSE</p>
-                        <p class="content">航向</p>
+                        <p class="title">PITCH</p>
+                        <p class="content" id="pitch_content"></p>
                     </div>
                     <div class="data-section">
-                        <p class="title">PRESSURE ALTITUDE</p>
-                        <p class="content">壓力高度</p>
+                        <p class="title">NUMBER OF SATELLITES</p>
+                        <p class="content" id="sat_num_content"> </p>
                     </div>
                 </div>
                 <div class="data-section-container">
                     <div class="data-section">
-                        <p class="title">DEPRESSION</p>
-                        <p class="content">氣壓</p>
+                        <p class="title">LONGITUDE</p>
+                        <p class="content" id="longitude_content"></p>
                     </div>
                     <div class="data-section">
-                        <p class="title">RELATIVE ALTITUDE</p>
-                        <p class="content">相對高度</p>
+                        <p class="title">COMMUNICATION QUALITY</p>
+                        <p class="content" id="sat_quality_content"></p>
                     </div>
                     <div class="data-section">
-                        <p class="title">COORDINATE</p>
-                        <p class="content">坐標</p>
+                        <p class="title">LATITUDE</p>
+                        <p class="content" id="latitude_content"></p>
                     </div>
                 </div>
                 <div class="data-section">
